manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 2345
      - path: /logs
        pathType: Prefix
        backend:
          service:
            name: log-reader-svc
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              number: 2345
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: to-do-backend-svc
            port:
              number: 2345
